<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_gravity="start"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:clickable="false">

    <TextView android:text="@string/Title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify"
        android:id="@+id/button"
        android:layout_below="@+id/button1"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignRight="@+id/button6"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:onClick="sendMessage"
        android:background="#F08C35" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores"
        android:id="@+id/button2"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button"
        android:layout_gravity="center"
        android:onClick="sendMessage"
        android:background="#F08C35" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button2"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button2"
        android:layout_gravity="center"
        android:onClick="sendMessage"
        android:background="#F08C35" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build"
        android:id="@+id/button4"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button3"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button3"
        android:layout_below="@+id/button3"
        android:layout_gravity="center"
        android:onClick="sendMessage"
        android:background="#F08C35" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bacon"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/button6"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_gravity="center"
        android:onClick="sendMessage"
        android:background="#F08C35" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:onClick="sendMessage"
        android:background="#FF0000"
        android:textColor="#FFFFFF" />

</RelativeLayout>
